<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">@string/app_name_beta</string>
    <string name="app_name_beta">Розклад ЗНУ beta</string>
    <string name="znu_schedule">Розклад ЗНУ</string>
    <string name="about_app">Про додаток</string>
    <string name="schedule">Розклад</string>
    <string name="action_today">Сьогодні</string>
    <string name="action_sync_schedule">Оновити розклад</string>
    <string name="tag_line_text">Завжди актуальний розклад у твоїй кишені</string>
    <string name="choose_department_hint">Оберіть факультет&#8230;</string>
    <string name="choose_group_hint">Оберіть групу&#8230;</string>
    <string name="choose_subgroup_hint">Оберіть підгрупу&#8230;</string>
    <string name="subgroup_format_1">%d підгрупа</string>
    <string name="subgroup_format_2">&#160;(%d підгрупа)</string>
    <string name="cancel">відмінити</string>
    <string name="login_button">УВІЙТИ</string>
    <string name="no_schedule">Поки що розклад відсутній</string>
    <string name="title_activity_login">Авторизація</string>
    <string name="numerator">чисельник</string>
    <string name="denominator">знаменник</string>
    <string name="day_off">Сьогодні вихідний</string>
    <string name="can_not_create_account">Помилка, неможливо створити обліковий запис</string>
    <string name="one_account_allowed">Дозволено тільки один обліковий запис</string>
    <string name="error_already_has_account">Помилка! Ви вже маєте обліковий запис</string>
    <string name="no_loaded_schedule">Розклад на цей тиждень ще не завантажено, або відсутній</string>
    <string name="lecturers_list_is_empty">Список викладачів ще не завантажено, або відсутній</string>
    <string name="subjects_list_is_empty">Список предметів ще не завантажено, або відсутній</string>
    <string name="not_specified">Не задано</string>
    <string name="retry">ПОВТОРИТИ</string>

    <!-- About -->
    <string name="social">Соціальні мережі</string>
    <string name="join_us_vk">Наша сторінка Вконтакті</string>
    <string name="vk_group_url">https://vk.com/public88668237</string>

    <string name="we">Ми</string>
    <string name="vojko_volodymyr">Войко Володимир</string>
    <string name="vojko_volodymyr_vk_url">https://vk.com/id21269685</string>
    <string name="vojko_volodymyr_email">vojkovladimir@gmail.com</string>

    <string name="ambroskin_maksym">Амброскін Максим</string>
    <string name="ambroskin_maksym_vk_url">https://vk.com/id95635253</string>

    <string name="klymenko_vadym">Клименко Вадим</string>
    <string name="klymenko_vadym_vk_url">https://vk.com/id9843512</string>

    <string name="android_app_dev">Розробник мобільного додатку</string>
    <string name="website_dev">Розробник веб сайту</string>

    <string name="additionally">Додатково</string>
    <string name="site_with_schedule">Сайт з розкладом</string>
    <string name="write_to_us">Написати нам</string>
    <string name="rate">Оцінити додаток</string>
    <string name="app_version">Версія додатку</string>

    <string name="write_to_us_subject">@string/znu_schedule</string>
    <string name="write_to_us_doted">Написати нам&#8230;</string>
    <string name="no_email_clients">На вашому телефоні немає жодного Email клієнту</string>
    <!-- About -->

    <!-- NavigationDrawer List Items -->
    <string name="group">Група</string>
    <string name="nav_drawer_item_schedule">Розклад</string>
    <string name="nav_drawer_item_subjects">Предмети</string>
    <string name="nav_drawer_item_lecturers">Викладачі</string>
    <string name="nav_drawer_item_settings">Налаштування</string>
    <string name="nav_drawer_item_about">@string/about_app</string>
    <string name="nav_drawer_open">Відкрити</string>
    <string name="nav_drawer_close">Закрити</string>

    <string name="action_change_subgroup">Змінити підгрупу</string>
    <string name="change_group_question">Змінити групу?</string>
    <string name="change_group">змінити групу</string>
    <string name="change_subgroup">змінити підгрупу</string>

    <!-- REST Methods Errors -->
    <string name="no_connection_error">Немає інтернет з’єднання</string>
    <string name="time_out_error">Тайм-аут вичерпано, спробуйте пізніше</string>
    <string name="server_error">Помилка серверу</string>
    <string name="unknown_error">Невідома помилка</string>
    <string name="network_error">Проблеми з інтернет з’єднанням</string>
    <string name="volley_error">Volley Error</string>

    <!-- Lorem Ipsum values -->
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_time">00:00</string>
    <string name="lorem_subject">Філософія</string>
    <string name="lorem_location">Аудиторія 37 (1 корпус)</string>
    <string name="icon_description_lorem">іконка</string>
    <string name="lorem_info">Чопоров Сергій Вікторович\n37 (1 корпус)</string>
    <string name="lorem_sub_header">Subheader</string>

    <string-array name="days_of_week">
        <item>Понеділок</item>
        <item>Вівторок</item>
        <item>Середа</item>
        <item>Четвер</item>
        <item>П`ятниця</item>
        <item>Субота</item>
        <item>Неділя</item>
    </string-array>

    <string-array name="months">
        <item>січня</item>
        <item>лютого</item>
        <item>березня</item>
        <item>квітня</item>
        <item>травня</item>
        <item>червня</item>
        <item>липня</item>
        <item>серпня</item>
        <item>вересня</item>
        <item>жовтня</item>
        <item>листопада</item>
        <item>грудня</item>
    </string-array>

    <string-array name="periodicity">
        <item>чисельник</item>
        <item>знаменник</item>
    </string-array>

    <!-- ScheduleItemActivity values -->
    <string name="location">Розташування</string>
    <string name="audience">Аудиторія</string>
    <string name="lecturer">Викладач</string>
    <string name="type">Тип</string>
    <string name="time">Час</string>

    <string-array name="class_type">
        <item>@string/not_specified</item>
        <item>Лекція</item>
        <item>Семінар</item>
        <item>Практика</item>
        <item>Консультація</item>
        <item>Екзамен</item>
    </string-array>

    <!-- Settings -->
    <string name="general_settings">Основні налаштування</string>
    <string name="app_settings">Налаштування додатку</string>
    <string name="sync">Синхронізація</string>
    <string name="auto_sync">Автоматична синхронізація</string>
    <string name="auto_sync_summary">Синхронізація через певний інтервал часу</string>
    <string name="auto_sync_interval">Інтервал синхронізації</string>
    <string name="clear_cache">Видалити кеш</string>
    <string name="clear_cache_summary">Вилучає весь кеш додатку</string>
    <string name="clear_cache_question">Видалити кеш?</string>
    <string name="clear_cache_description">Весь кеш розкладу буде видалено</string>
    <string name="clear">Видалити</string>

    <integer name="auto_sync_interval_default">1</integer>

    <string-array name="auto_sync_intervals">
        <item>Кожну годину</item>
        <item>Кожні 3 години</item>
        <item>Раз на день</item>
        <item>Раз на 3 дні</item>
    </string-array>

    <integer-array name="auto_sync_intervals_values">
        <item>@integer/auto_sync_interval_default</item>
        <item>3</item>
        <item>24</item>
        <item>72</item>
    </integer-array>

    <string name="maps_api_key">AIzaSyAYjzB1ic2B4s52v2E7kZPW1v9btZa_NDQ</string>

    <!-- App Widget -->
    <string name="widget_name">Розклад ЗНУ</string>

</resources>
