<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.pp.rozkladznu.app.MainActivity">

    <item
        android:id="@+id/action_today"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/action_today"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync_schedule"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_sync_schedule"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_subgroup"
        android:title="@string/action_change_subgroup"
        android:visible="false"
        app:showAsAction="never" />
</menu>
