<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/three_line_list_item_height"
    android:clickable="true"
    android:background="@drawable/list_item_background">

    <View
        android:visibility="gone"
        android:id="@+id/status"
        android:layout_width="@dimen/status_indicator_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blue_600" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/time_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/key_line_1">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_time"
                android:textColor="@color/blue_600"
                android:textSize="18sp" />

            <TextView
                android:layout_below="@id/start_time"
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_time"
                android:textColor="@color/blue_600"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/time_box"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/key_line_1">

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_size_primary"
                android:text="@string/lorem_subject" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:lines="2"
                android:ellipsize="end"
                android:text="@string/lorem_info" />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>